# caldav-ics

./: .gitignore  LICENSE  README.md  pyproject.toml
src/caldav_ics/: __main__.py
src/caldav_ics/lib/: calendar.py
